<resources>
    <string name="app_name">MyMovLi</string>
    <string name="full_name">Reza Asriano Maulana</string>
    <string name="email">rezaasriano1933@gmail.com</string>
    <string name="github">CallMeJaja</string>
    <string name="instagram">rzae.id</string>
    <string name="title">Judul Film</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam in ipsam mollitia odit quaerat sequi voluptatibus! Ad, aspernatur, laborum! Aliquam architecto assumenda autem consequatur nostrum numquam officiis quasi sequi voluptates.</string>
    <string name="director">Direktur Film</string>
    <string name="starring">Pemeran Film</string>
    <string name="censor_rating">Rating Film</string>
    <string name="genre">Genre Film</string>
    <string name="language">Bahasa Film</string>
    <string name="subtitle">Subtitle Film</string>
    <string name="duration">Durasi Film</string>
    <string name="poster">Poster Film</string>
    <string-array name="movie_posters">
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/20004600.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/24055700.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/24057100.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/24059200.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/24059700.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/24060200.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/24060500.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/24061000.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/24061400.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/24061800.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/25000400.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/25000800.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/25000900.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/25001200.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/25001300.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/25001400.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/25001900.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/25002100.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/25002700.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/25002800.jpg</item>
        <item>https://cdn.cgv.id/uploads_v2/movie/compressed/25002900.jpg</item>
    </string-array>
    <string-array name="movie_title">
        <item>BUKU HARIANKU</item>
        <item>SEBELUM 7 HARI</item>
        <item>MUFASA</item>
        <item>SONIC THE HEDGEHOG 3</item>
        <item>1 KAKAK 7 PONAKAN</item>
        <item>PERAYAAN MATI RASA</item>
        <item>KEAJAIBAN AIR MATA WANITA</item>
        <item>PENGANTIN SETAN</item>
        <item>404 RUN RUN</item>
        <item>DARK NUNS</item>
        <item>OVERLORD: THE SACRED KINGDOM</item>
        <item>RIDER</item>
        <item>PENGANTIN IBLIS</item>
        <item>LAGU CINTA UNTUK MAMA</item>
        <item>COMPANION</item>
        <item>A BUSINESS PROPOSAL</item>
        <item>THE LAST DANCE</item>
        <item>(G)I-DLE WORLD TOUR [IDOL] IN CINEMA</item>
        <item>PADDINGTON IN PERU</item>
        <item>SKY FORCE</item>
        <item>FORBIDDEN FAIRYTALE</item>
    </string-array>
    <string-array name="movie_description">
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
        <item>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam aut consectetur deserunt eum expedita, explicabo laboriosam laudantium nemo nisi perspiciatis, possimus quaerat quibusdam quo ratione totam vitae voluptatem, voluptatibus?</item>
    </string-array>
    <string-array name="movie_director">
        <item>Angling Sagaran</item>
        <item>Awi Suryadi</item>
        <item>Barry Jenkins</item>
        <item>Jeff Fowler</item>
        <item>Yandy Laurens</item>
        <item>Umay Shahab</item>
        <item>Indra Gunawan</item>
        <item>Azhar Kinoi Lubis</item>
        <item>Pichaya Jarusboonpracha</item>
        <item>Kwon Hyeok-jae</item>
        <item>Naoyuki Ito</item>
        <item>Kung Fu-Nitiwat Cholvanisiri</item>
        <item>Azhar Kinoi Lubis</item>
        <item>Hasto Broto</item>
        <item>Drew Hancock</item>
        <item>Rako Prijanto</item>
        <item>CHAN Mou Yin</item>
        <item>Yoondong Oh</item>
        <item>Dougal Wilson</item>
        <item>Sandeep Kewlani</item>
        <item>LEE Jong-suk</item>
        <item></item>
    </string-array>
</resources>