<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MovieDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <!--CardView: Poster + Detail -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="?attr/colorSurfaceInverse"
            app:cardElevation="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Poster -->
                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="120dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/sample_poster" />

                <!-- Detail -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/movie_poster"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@id/movie_title"
                        style="@style/TextContent.TitleMedium.Bold"
                        tools:text="@string/title" />

                    <TextView
                        android:id="@+id/movie_censor_rating"
                        style="@style/TextContent.BodyMedium"
                        tools:text="@string/censor_rating" />

                    <TextView
                        android:id="@+id/movie_genre"
                        style="@style/TextContent.BodyMedium"
                        tools:text="@string/genre" />

                    <TextView
                        android:id="@+id/movie_duration"
                        style="@style/TextContent.BodyMedium"
                        tools:text="@string/duration" />

                    <TextView
                        android:id="@+id/movie_language"
                        style="@style/TextContent.BodyMedium"
                        tools:text="@string/language" />

                    <TextView
                        android:id="@+id/movie_subtitle"
                        style="@style/TextContent.BodyMedium"
                        tools:text="@string/subtitle" />

                    <TextView
                        android:id="@+id/movie_director"
                        style="@style/TextContent.BodyMedium"
                        tools:text="@string/director" />

                    <TextView
                        android:id="@+id/movie_starring"
                        style="@style/TextContent.BodyMedium"
                        tools:text="@string/starring" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/movie_description"
            style="@style/TextContent.BodyMedium.Gray"
            tools:text="@string/description" />
    </LinearLayout>
</ScrollView>