<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="6dp"
    app:cardBackgroundColor="?attr/colorSecondary"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Poster Image -->
        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <!-- Movie Title -->
        <TextView
            android:id="@+id/movie_title"
            style="@style/TextContent.TitleMedium.MarginLeftRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"
            tools:text="@string/title" />

        <!-- Short Description -->

        <TextView
            android:id="@+id/movie_description"
            style="@style/TextContent.BodyMedium.MarginLeftRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            tools:text="@string/description" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_description">
            <!-- Censor Rating -->
            <TextView
                android:id="@+id/movie_censor_rating"
                style="@style/TextContent.BodyMedium.MarginAll"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_description"
                tools:text="@string/censor_rating" />

            <!-- Movie Genre -->
            <TextView
                android:id="@+id/movie_genre"
                style="@style/TextContent.BodyMedium.MarginAll"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_censor_rating"
                app:layout_constraintTop_toBottomOf="@+id/movie_description"
                tools:text="@string/genre" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

